--- a/Data_downloader.ipynb
+++ b/Data_downloader.ipynb
@@ -15,24 +15,22 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "w2ZJP5JzumGY",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "w2ZJP5JzumGY"
       },
+      "outputs": [],
       "source": [
         "#!pip install yahoo_finance_api2"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "To_29anDu5H3",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import sys\n",
@@ -57,76 +55,55 @@
         "  df['timestamp'] = [datetime.fromtimestamp(t/1000) for t in df['timestamp']]\n",
         "\n",
         "  return df[(df['timestamp'] >= '1995-1-1 01:00:00') & (df['timestamp'] <= '2018-12-31 04:00:00')]"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "8MZzYb9kyJac",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "8MZzYb9kyJac"
       },
+      "outputs": [],
       "source": [
         "djia_str = \"KO MCD JPM AXP CAT UTX MSFT CVX AAPL HD DIS V XOM TRV PFE MRK JNJ BA VZ IBM GS WBA INTC DOW UNH WMT PG CSCO NKE MMM\"\n",
         "name_lst = [x for x in str.split(\" \")]\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "0DvLvw0B9STV",
-        "colab_type": "code",
-        "outputId": "0469a19b-a5e8-4cc5-aa91-34feade2a8aa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "AAPL has been downloaded\nNKE has been downloaded\nDJI has been downloaded\n"
         }
-      },
+      ],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
         "apple = dataloader(\"AAPL\")\n",
         "nike =  dataloader(\"NKE\")\n",
         "dji  = dataloader(\"DJI\")\n"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "AAPL has been downloaded\n",
-            "NKE has been downloaded\n",
-            "DJI has been downloaded\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "khKuV8bt_uIU",
-        "colab_type": "code",
-        "outputId": "d354545d-072d-4ad3-e074-f8227a2348d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "colab_type": "code",
+        "id": "khKuV8bt_uIU",
+        "outputId": "d354545d-072d-4ad3-e074-f8227a2348d6"
       },
-      "source": [
-        "# print(apple['close'].describe() )\n",
-        "# print(nike['close'].describe() )\n",
-        "# print(dji['close'].describe() )\n",
-        "apple.head()"
-      ],
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -214,25 +191,30 @@
               "1316 1995-01-09 14:30:00  1.486607  1.495536  1.464286  1.471540   68521600"
             ]
           },
+          "execution_count": 5,
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# print(apple['close'].describe() )\n",
+        "# print(nike['close'].describe() )\n",
+        "# print(dji['close'].describe() )\n",
+        "apple.head()"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "9RHxXNb6Vjye",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "9RHxXNb6Vjye"
+      },
+      "outputs": [],
+      "source": []
     }
   ]
 }
