--- a/test.ipynb
+++ b/test.ipynb
@@ -33,7 +33,7 @@
         "import sys\n",
         "\n",
         "stock_name = \"AAPL\"\n",
-        "model_name = \"model_60\"\n",
+        "model_name = \"model_\" + stock_name\n",
         "model = load_model(\"./models/\"+model_name)\n",
         "window_size = model.layers[0].input.shape.as_list()[1]\n",
         "\n",
@@ -113,12 +113,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "### Return of S&P 500"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "sns.scatterplot(x, y=, data=tips)"
+        "from helper import *\n"
       ]
     }
   ]
