--- a/test.ipynb
+++ b/test.ipynb
@@ -15,13 +15,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
-          "text": "Number of days we are playing 62\nBuy : 227.25999450683597\nSell : 229.27999877929688 Current Total Gain :2.020004272460909\nBuy : 179.5500030517578\nBuy : 178.5800018310547\nSell : 184.82000732421875 Current Total Gain :7.290008544921847\nSell : 176.69000244140625 Current Total Gain :5.400009155273409\n----------\nstock_name AAPL total gain : 5.400009155273409\n"
+          "text": "C:\\Users\\pb061\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n  from ._conv import register_converters as _register_converters\nUsing TensorFlow backend.\n"
+        },
+        {
+          "ename": "IndentationError",
+          "evalue": "expected an indented block (binbot.py, line 34)",
+          "output_type": "error",
+          "traceback": [
+            "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+            "  File \u001b[0;32m\"C:\\Users\\pb061\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m2963\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+            "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-dd1eace86fc2>\"\u001b[1;36m, line \u001b[1;32m4\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from binbot import Binbot\u001b[0m\n",
+            "\u001b[1;36m  File \u001b[1;32m\"c:\\Users\\pb061\\OneDrive\\Semester3\\W4995_10\\W4995_DL_Project_Team23\\binbot.py\"\u001b[1;36m, line \u001b[1;32m34\u001b[0m\n\u001b[1;33m    '''\u001b[0m\n\u001b[1;37m       \n^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+          ]
         }
       ],
       "source": [
@@ -68,15 +79,15 @@
         "    else:\n",
         "        tracker['action'].append(\"Hold\")\n",
         "    tracker['reward'].append(reward)\n",
-        "    done = True if t == l-1 else False\n",
-        "    bot.memory.append((state, action, reward, next_state, done))\n",
+        "    is_complete = True if t == l-1 else False\n",
+        "    bot.memory.append((state, action, reward, next_state, is_complete))\n",
         "    state = next_state\n",
-        "    if done:\n",
+        "    if is_complete:\n",
         "        print(\"-\"*10)\n",
         "        print(\"stock_name \" + stock_name + \" total gain : \"  + str(total_gain))\n",
         "\n",
         "    if len(bot.memory) > batch_size:\n",
-        "        bot.expReplay(batch_size)"
+        "        bot.replay(batch_size)"
       ]
     },
     {
@@ -123,12 +134,75 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from helper import *\n"
+        "from helper import *\n",
+        "import pandas as pd\n",
+        "df = pd.read_csv('./data/sp500.csv')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sp_close = list(df[(df['timestamp'] >= '2018-1-1 01:00:00') & (df['timestamp'] <= '2018-12-31 12:00:00')]['close'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "(0.5866305988806765, -4.464207362009514)"
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "evaluate(sp_close)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "a = np.array(sp_close)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": "62"
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(a)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ]
 }
