--- a/test.ipynb
+++ b/test.ipynb
@@ -181,6 +181,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "ss.1,dads.2\n"
+        }
+      ],
+      "source": [
+        "print(\"ss.{},dads.{}\".format(1,2))"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
