Time Series prediction

--- a/Project_TS.ipynb
+++ b/Project_TS.ipynb
@@ -231,13 +231,12 @@
         "  conv_NN = Sequential()\n",
         "\n",
         "  #A gaussian noise to focus on the trend and not a too much precise prediction\n",
-        "  #Beware Gaussian noise layers are activated only during the learning phase. See Keras documentation for more precision.\n",
+        "  #Beware Gaussian noise layers are activated only during the learning phase. \n",
         "  conv_NN.add(\n",
         "      GaussianNoise(input_shape=(10,1,), stddev=10, name=\"Noise\")\n",
         "  )\n",
         "\n",
-        "  #The convolutional layers to focus on pattern recognition. See my report for more information.\n",
-        "  #Beware Dropout layers are activated only during the learning phase. See Keras documentation for more precision.\n",
+        "  #The convolutional layers to focus on pattern recognition.\n",
         "  conv_NN.add(\n",
         "      Conv1D(\n",
         "          filters=10,\n",
@@ -346,6 +345,7 @@
       "source": [
         "model = CNN_model()\n",
         "\n",
+        "#Time to train\n",
         "model.fit(\n",
         "    x = np.array(train_data),\n",
         "    y = np.array(res_train),\n",
